Update core/src/main/java/be/cytomine/config/SecurityConfiguration.java
Co-authored-by: Ba Thien Le <bathien.le.pro@gmail.com>